--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,9 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tiptap/extension-color": "^2.10.2",
+    "@tiptap/extension-font-family": "^2.10.2",
+    "@tiptap/extension-highlight": "^2.10.2",
     "@tiptap/extension-image": "^2.10.2",
     "@tiptap/extension-table": "^2.10.2",
     "@tiptap/extension-table-cell": "^2.10.2",
@@ -44,6 +47,8 @@
     "@tiptap/extension-table-row": "^2.10.2",
     "@tiptap/extension-task-item": "^2.10.2",
     "@tiptap/extension-task-list": "^2.10.2",
+    "@tiptap/extension-text-style": "^2.10.2",
+    "@tiptap/extension-underline": "^2.10.2",
     "@tiptap/pm": "^2.10.2",
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
@@ -55,8 +60,9 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
     "next": "15.0.3",
-    "next-themes": "^0.4.6",
+    "next-themes": "^0.4.1",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.55.0",
@@ -69,11 +75,13 @@
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.1",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
