--- a/client/package.json
+++ b/client/package.json
@@ -74,6 +74,7 @@
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.1",
+    "tiptap-pagination-breaks": "^1.0.3",
     "vaul": "^1.1.2",
     "zod": "^3.24.2",
     "zustand": "^5.0.1"
