--- a/client/package.json
+++ b/client/package.json
@@ -84,6 +84,7 @@
     "tiptap-extension-resize-image": "^1.2.1",
     "tiptap-pagination-breaks": "^1.0.3",
     "vaul": "^1.1.2",
+    "ws": "^8.18.1",
     "y-prosemirror": "^1.3.4",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.26",
@@ -95,6 +96,7 @@
     "@types/react": "^18",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.18.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
