--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "@clerk/backend": "^1.30.0",
     "@clerk/clerk-sdk-node": "^4.13.23",
+    "cookie": "^1.0.2",
+    "dotenv": "^16.5.0",
     "ws": "^8.18.1",
     "y-websocket": "^1.3.18"
   },
