--- a/client/package.json
+++ b/client/package.json
@@ -86,6 +86,7 @@
     "vaul": "^1.1.2",
     "ws": "^8.18.1",
     "y-prosemirror": "^1.3.4",
+    "y-socket.io": "^1.1.3",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.26",
     "zod": "^3.24.2",
