--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,10 @@
     "@clerk/clerk-sdk-node": "^4.13.23",
     "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.1",
+    "y-socket.io": "^1.1.3",
     "y-websocket": "^1.3.18"
   },
   "scripts": {
