--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.1",
     "ws": "^8.18.1",
     "y-socket.io": "^1.1.3",
