--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@clerk/backend": "^1.30.0",
     "@clerk/clerk-sdk-node": "^4.13.23",
+    "convex": "^1.23.0",
     "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -9,7 +10,8 @@
     "socket.io": "^4.8.1",
     "ws": "^8.18.1",
     "y-socket.io": "^1.1.3",
-    "y-websocket": "^1.3.18"
+    "y-websocket": "^1.3.18",
+    "yjs": "^13.6.26"
   },
   "scripts": {
     "start": "nodemon server.js"
